connect project to mongodb final project db
