# routes/index.js
@@ -2,6 +2,6 @@ const express = require('express');
 const router = express.Router();
 
 router.use('/', require('./swagger'));
-router.use('/contacts', require('./contacts'));
+router.use('/restaurants', require('./restaurants'));
 
 module.exports = router;
